--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://github.com/Denishilo/hws2.git",
+  "homepage": "https://Denishilo.github.io/hws2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
